Error/Implementation/Example/Pods/Target Support Files/TuringErrorImplementation/TuringErrorImplementation.modulemap
framework module TuringErrorImplementation {
  umbrella header "TuringErrorImplementation-umbrella.h"

  export *
  module * { export * }
}
